--- a/Experiments/Ruby/rails-projects/task-manager-app/app/views/tasks/show.html.erb
+++ b/Experiments/Ruby/rails-projects/task-manager-app/app/views/tasks/show.html.erb
@@ -1,2 +1,41 @@
-<h1>Tasks#edit</h1>
-<p>Find me in app/views/tasks/edit.html.erb</p>
+<%= link_to("Back to list", tasks_path, class: "back-link") %><br />
+
+<div class="tasks show">
+  <h2>Show task</h2>
+
+  <div class="actions">
+    <%= link_to('Edit', edit_task_path(@task)) %>
+    <%= link_to("Delete", delete_task_path(@task)) %>
+  </div>
+
+  <table summary="Task detail view">
+    <tr>
+      <th>Name</th>
+      <td><%= @task.name %></td>
+    </tr>
+    <tr>
+      <th>Position</th>
+      <td><%= @task.position %></td>
+    </tr>
+    <tr>
+      <th>Completed</th>
+      <td><%= @task.completed? ? "Yes" : "No" %></td>
+    </tr>
+    <tr>
+      <th>Description</th>
+      <td><%= @task.description %></td>
+    </tr>
+    <tr>
+      <th>Category</th>
+      <td><%= @task.category&.name || "-" %></td>
+    </tr>
+    <tr>
+      <th>Created</th>
+      <td><%= @task.created_at %></td>
+    </tr>
+    <tr>
+      <th>Updated</th>
+      <td><%= @task.updated_at %></td>
+    </tr>
+  </table>
+</div>
