--- a/Experiments/Ruby/rails-projects/task-manager-app/app/views/categories/delete.html.erb
+++ b/Experiments/Ruby/rails-projects/task-manager-app/app/views/categories/delete.html.erb
@@ -1,2 +1,12 @@
-<h1>Categories#delete</h1>
-<p>Find me in app/views/categories/delete.html.erb</p>
+<%= link_to("Back to main", "/", class: "back-link") %><br />
+
+<div class="category delete">
+  <h2>Delete Category</h2>
+
+  <%= form_for(@category, method: "delete") do |f| %>
+    <p>Are you sure you want to permanently delete this category?</p>
+    <p><%= @category.name %></p>
+
+    <%= f.submit("Delete category") %>
+  <% end %>
+</div>
