--- a/Experiments/Ruby/rails-projects/task-manager-app/app/views/categories/show.html.erb
+++ b/Experiments/Ruby/rails-projects/task-manager-app/app/views/categories/show.html.erb
@@ -1,2 +1,16 @@
-<h1>Categories#show</h1>
-<p>Find me in app/views/categories/show.html.erb</p>
+<h1><%= @category.name %></h1>
+
+<div class="progress-container">
+  <p class="progress-text"><%= @percent_complete %>% Complete (<%= @completed_tasks %>/<%= @total_tasks %> Todo Items)</p>
+  <div class="progress-bar">
+    <div class="progress" style="width: <%= @percent_complete %>%"></div>
+  </div>
+</div>
+
+<ul>
+  <% @tasks.each do |task| %>
+    <li><%= link_to task.name, task_path(task) %></li>
+  <% end %>
+</ul>
+
+<%= link_to("Delete category", delete_category_path(@category)) %>
