--- a/Experiments/Ruby/rails-projects/task-manager-app/app/views/tasks/delete.html.erb
+++ b/Experiments/Ruby/rails-projects/task-manager-app/app/views/tasks/delete.html.erb
@@ -1,2 +1,12 @@
-<h1>Tasks#edit</h1>
-<p>Find me in app/views/tasks/edit.html.erb</p>
+<%= link_to("Back to list", tasks_path, class: "back-link") %><br />
+
+<div class="tasks delete">
+  <h2>Delete Task</h2>
+
+  <%= form_for(@task, method: "delete") do |f| %>
+    <p>Are you sure you want to permanently delete this task?</p>
+    <p><%= @task.name %></p>
+
+    <%= f.submit("Delete task") %>
+  <% end %>
+</div>
