fetch from notion

--- a/Experiments/React/fetch-from-notion/styles/globals.css
+++ b/Experiments/React/fetch-from-notion/styles/globals.css
@@ -6,8 +6,20 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+body {
+  background-color: white;
+  color: black;
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: rgb(24, 24, 31);
+    color: rgb(238, 238, 238);
+  }
+}
+
 a {
-  color: inherit;
+  color: #2563eb;
   text-decoration: none;
 }
 
@@ -15,12 +27,6 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+h1 {
+  font-weight: 800;
 }
