--- a/Experiments/React/verses/pages/index.module.css
+++ b/Experiments/React/verses/pages/index.module.css
@@ -1,7 +1,21 @@
-.container {
-  padding: 0 20px;
-  max-width: 700px;
-  margin: 0 auto;
+.heading {
+  padding-bottom: 20px;
+  border-bottom: 1px solid var(--border-color);
+  text-transform: uppercase;
+  font-size: 15px;
+  letter-spacing: 0.5px;
+}
+
+.listItem {
+  border-bottom: 1px solid var(--border-color);
+}
+
+.listItem a {
+  display: block;
+  padding: 20px 10px;
+  color: white;
+  font-size: 20px;
+  font-weight: 600;
 }
 
 .logos {
@@ -22,22 +36,6 @@
 .plus {
   font-size: 20px;
   margin: 0 20px;
-}
-
-.heading {
-  margin-bottom: 20px;
-  padding-bottom: 20px;
-  border-bottom: 1px solid #dedede;
-  text-transform: uppercase;
-  font-size: 15px;
-  opacity: 0.6;
-  letter-spacing: 0.5px;
-}
-
-@media (prefers-color-scheme: dark) {
-  .heading {
-    border-color: #343539;
-  }
 }
 
 .posts {
