--- a/Experiments/React/verses/styles/globals.css
+++ b/Experiments/React/verses/styles/globals.css
@@ -57,6 +57,40 @@ h1 {
   margin-top: 50px;
 }
 
+/* =========== */
+/* Index scene */
+/* =========== */
+
+.listHeader {
+  padding-bottom: 20px;
+  border-bottom: 1px solid var(--border-color);
+  text-transform: uppercase;
+  font-size: 15px;
+  letter-spacing: 0.5px;
+}
+
+.verses-ol {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.verses-li {
+  border-bottom: 1px solid var(--border-color);
+}
+
+.verses-li a {
+  display: block;
+  padding: 20px 10px;
+  color: white;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+/* =========== */
+/* Verse scene */
+/* =========== */
+
 .verse {
   text-align: center;
   font-size: 30px;
