--- a/Experiments/React/verses/styles/globals.css
+++ b/Experiments/React/verses/styles/globals.css
@@ -1,6 +1,7 @@
 :root {
   --hue: 216;
   --dark-color: hsl(var(--hue), 45%, 7%);
+  /* --dark-color-transparent: hsla(var(--hue), 45%, 7%, 0.98); */
   --light-color: hsl(var(--hue), 95%, 98%);
   --link-color: hsl(var(--hue), 95%, 55%);
   --border-color: hsl(var(--hue), 20%, 25%);
@@ -28,6 +29,7 @@ body {
 body {
   background-color: white;
   color: black;
+  position: relative;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -58,8 +60,33 @@ h1 {
 }
 
 /* =========== */
+/* Nav */
+/* =========== */
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid var(--border-color);
+  padding: 14px;
+}
+
+nav button {
+  padding: 4px 10px;
+}
+
+/* =========== */
 /* Index scene */
 /* =========== */
+
+.list-container {
+  padding: 20px;
+  /* max-width: 700px; */
+  margin: 0 auto;
+  position: absolute;
+  left: 0;
+  right: 0;
+  background-color: var(--dark-color);
+}
 
 .listHeader {
   padding-bottom: 20px;
