componetized menu, added hamburger icon

--- a/Experiments/React/verses/styles/globals.css
+++ b/Experiments/React/verses/styles/globals.css
@@ -1,12 +1,11 @@
 :root {
   --hue: 216;
   --dark-color: hsl(var(--hue), 45%, 7%);
-  /* --dark-color-transparent: hsla(var(--hue), 45%, 7%, 0.98); */
   --light-color: hsl(var(--hue), 95%, 98%);
   --link-color: hsl(var(--hue), 95%, 55%);
   --border-color: hsl(var(--hue), 20%, 25%);
 
-  --nav-height: 50px;
+  --nav-height: 58px;
   --ease-out-quart: cubic-bezier(0.165, 0.84, 0.44, 1);
   --font-family: "IBM Plex Sans", system-ui, -apple-system, Helvetica Neue,
     sans-serif;
@@ -74,8 +73,9 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-inline: 10px;
   height: var(--nav-height);
+  padding-left: 10px;
+  padding-right: 4px;
   background-color: var(--dark-color);
   border-bottom: 1px solid var(--border-color);
 }
@@ -89,13 +89,12 @@ nav button {
 /* +++++++++++ */
 
 .menu {
-  padding: 20px 14px;
-  margin: 0 auto;
   position: absolute;
   z-index: 9;
-  top: 50px;
+  top: var(--nav-height);
   left: 0;
   right: 0;
+  padding: 20px 14px;
   background-color: var(--dark-color);
 }
 
@@ -130,7 +129,7 @@ nav button {
   width: 100%;
   overflow: hidden;
   display: -webkit-box;
-  -webkit-line-clamp: 3;
+  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 }
 
@@ -140,7 +139,7 @@ nav button {
 
 .verse-wrap {
   position: relative;
-  top: 50px;
+  top: var(--nav-height);
   min-height: calc(100vh - var(--nav-height));
   display: flex;
   align-items: center;
