--- a/Experiments/React/verses/styles/globals.css
+++ b/Experiments/React/verses/styles/globals.css
@@ -15,6 +15,15 @@
   ---transparent: #0f0c1b00;
 }
 
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 /* ++++++ */
 /* Global */
 /* ++++++ */
@@ -173,6 +182,11 @@ nav {
   font-size: 20px;
   font-weight: 600;
   cursor: pointer;
+  animation-name: fadein;
+  animation-delay: 200ms;
+  animation-duration: 800ms;
+  animation-fill-mode: both;
+  animation-timing-function: var(--ease-out-quart);
 }
 
 .menu-li:first-of-type {
@@ -185,6 +199,14 @@ nav {
 
 .menu-li * + * {
   margin-top: 10px;
+}
+
+.menu-verse-tag {
+  font-size: 11px;
+  text-transform: uppercase;
+  background-color: var(--brand-color);
+  border-radius: 3px;
+  padding: 2px 4px;
 }
 
 .menu-verse-body {
