--- a/Experiments/React/verses/styles/globals.css
+++ b/Experiments/React/verses/styles/globals.css
@@ -202,6 +202,8 @@ nav {
 }
 
 .menu-verse-tag {
+  color: var(--light-color);
+  border: 1px solid var(--light-color);
   font-size: 11px;
   text-transform: uppercase;
   border-radius: 3px;
