New rails project

--- a/Experiments/Ruby/rails-projects/task-manager-app/app/views/categories/new.html.erb
+++ b/Experiments/Ruby/rails-projects/task-manager-app/app/views/categories/new.html.erb
@@ -1,10 +1,15 @@
-<%= link_to("Back to list", "/", class: "back-link") %><br />
+<%= link_to("Back to List", categories_path, :class => 'back-link') %>
 
 <div class="categories new">
   <h2>Create Category</h2>
 
   <%= form_for(@category) do |f| %>
-    <%= f.text_field(:name, placeholder: "Name", required: true) %>
-    <%= f.submit("Create category") %>
+
+    <%= render(partial: 'form', locals: {f: f}) %>
+
+    <div class="form-buttons">
+      <%= f.submit("Create Category") %>
+    </div>
+
   <% end %>
 </div>
