--- a/Experiments/Ruby/rails-projects/task-manager-app/app/views/categories/delete.html.erb
+++ b/Experiments/Ruby/rails-projects/task-manager-app/app/views/categories/delete.html.erb
@@ -1,12 +1,16 @@
-<%= link_to("Back to main", "/", class: "back-link") %><br />
+<%= link_to("Back to List", categories_path, class: 'back-link') %>
 
-<div class="category delete">
+<div class="categories delete">
   <h2>Delete Category</h2>
 
-  <%= form_for(@category, method: "delete") do |f| %>
+  <%= form_for(@category, method: 'delete') do |f| %>
+
     <p>Are you sure you want to permanently delete this category?</p>
     <p><%= @category.name %></p>
 
-    <%= f.submit("Delete category") %>
+    <div class="form-buttons">
+      <%= f.submit("Delete Category") %>
+    </div>
+
   <% end %>
 </div>
