--- a/Experiments/Ruby/rails-projects/task-manager-app/app/views/categories/show.html.erb
+++ b/Experiments/Ruby/rails-projects/task-manager-app/app/views/categories/show.html.erb
@@ -1,16 +1,34 @@
-<h1><%= @category.name %></h1>
+<%= link_to("Back to List", categories_path, class: 'back-link') %>
 
-<div class="progress-container">
-  <p class="progress-text"><%= @percent_complete %>% Complete (<%= @completed_tasks %>/<%= @total_tasks %> Todo Items)</p>
-  <div class="progress-bar">
-    <div class="progress" style="width: <%= @percent_complete %>%"></div>
+<div class="categories show">
+  <h2>Show Category</h2>
+
+  <div class="actions">
+    <%= link_to('Edit', edit_category_path(@category)) %>
+    <%= link_to('Delete', delete_category_path(@category)) %>
   </div>
+
+  <table summary="category detail view">
+    <tr>
+      <th>Name</th>
+      <td><%= @category.name %></td>
+    </tr>
+    <tr>
+      <th>Tasks</th>
+      <td>
+        <% @category.tasks.each do |task| %>
+          <%= task.name %><br />
+        <% end %>
+      </td>
+    </tr>
+    <tr>
+      <th>Created</th>
+      <td><%= @category.created_at %></td>
+    </tr>
+    <tr>
+      <th>Updated</th>
+      <td><%= @category.updated_at %></td>
+    </tr>
+  </table>
+
 </div>
-
-<ul>
-  <% @tasks.each do |task| %>
-    <li><%= link_to task.name, task_path(task) %></li>
-  <% end %>
-</ul>
-
-<%= link_to("Delete category", delete_category_path(@category)) %>
