--- a/Experiments/Ruby/rails-projects/task-manager-app/app/views/tasks/delete.html.erb
+++ b/Experiments/Ruby/rails-projects/task-manager-app/app/views/tasks/delete.html.erb
@@ -1,12 +1,17 @@
-<%= link_to("Back to list", tasks_path, class: "back-link") %><br />
+<%= link_to("Back to List", tasks_path, class: 'back-link') %>
 
 <div class="tasks delete">
   <h2>Delete Task</h2>
 
-  <%= form_for(@task, method: "delete") do |f| %>
+  <%= form_for(@task, method: 'delete') do |f| %>
+    <% # url: task_path(@task), method: 'delete' %>
+
     <p>Are you sure you want to permanently delete this task?</p>
     <p><%= @task.name %></p>
 
-    <%= f.submit("Delete task") %>
+    <div class="form-buttons">
+      <%= f.submit("Delete Task") %>
+    </div>
+
   <% end %>
 </div>
