--- a/Experiments/Ruby/rails-projects/task-manager-app/app/views/tasks/edit.html.erb
+++ b/Experiments/Ruby/rails-projects/task-manager-app/app/views/tasks/edit.html.erb
@@ -1,10 +1,16 @@
-<%= link_to("Back to list", tasks_path, class: "back-link") %><br />
+<%= link_to("Back to List", tasks_path, :class => 'back-link') %>
 
 <div class="tasks edit">
   <h2>Edit Task</h2>
 
   <%= form_for(@task) do |f| %>
-    <%= render(partial: "form", locals: {f: f}) %>
-    <%= f.submit("Edit task") %>
+    <% # url: task_path(@task), method: 'patch' %>
+
+    <%= render(partial: 'form', locals: {f: f}) %>
+
+    <div class="form-buttons">
+      <%= f.submit("Edit Task") %>
+    </div>
+
   <% end %>
 </div>
