--- a/Experiments/Ruby/rails-projects/task-manager-app/app/views/tasks/index.html.erb
+++ b/Experiments/Ruby/rails-projects/task-manager-app/app/views/tasks/index.html.erb
@@ -1,11 +1,11 @@
-<%= link_to("Back to homepage", {controller: 'main', action: 'index'}) %><br />
+<%= link_to('Back to Menu', menu_path, class: 'back-link') %><br />
 
 <div class="tasks index">
   <h2>Tasks</h2>
 
-  <%= link_to("Add new task", new_task_path, class: "action new") %>
+  <%= link_to("Add New Task", new_task_path, class: 'action new') %>
 
-  <table class="listing" summary="Task list">
+  <table class="listing" summary="Task list" style="width: 100%;">
     <tr class="header">
       <th>#</th>
       <th>Task</th>
@@ -13,18 +13,26 @@
       <th>Category</th>
       <th>Actions</th>
     </tr>
+
+    <%
+=begin%>
+
     <% @tasks.each do |task| %>
-      <tr>
-        <td><%= task.position %></td>
-        <td><%= task.name %></td>
-        <td><%= task.completed? ? "Yes" : "No" %></td>
-        <td><%= task.category&.name || "-" %></td>
-        <td class="actions">
-          <%= link_to("Show", task_path(task)) %>
-          <%= link_to("Edit", edit_task_path(task)) %>
-          <%= link_to("Delete", delete_task_path(task)) %>
-        </td>
-      </tr>
+    <tr>
+      <td><%= task.position %></td>
+      <td><%= task.name %></td>
+      <td><%= task.completed? ? 'Yes' : 'No' %></td>
+      <td><%= task.category&.name || '-' %></td>
+      <td class="actions">
+        <%= link_to("Show", task_path(task), class: 'action show') %>
+        <%= link_to("Edit", edit_task_path(task), class: 'action edit') %>
+        <%= link_to("Delete", delete_task_path(task), class: 'action delete') %>
+      </td>
+    </tr>
     <% end %>
+    
+    <%
+=end%>
+
   </table>
 </div>
