--- a/Experiments/Ruby/rails-projects/task-manager-app/app/views/tasks/new.html.erb
+++ b/Experiments/Ruby/rails-projects/task-manager-app/app/views/tasks/new.html.erb
@@ -1,10 +1,16 @@
-<%= link_to("Back to list", tasks_path, class: "back-link") %><br />
+<%= link_to("Back to List", tasks_path, :class => 'back-link') %>
 
 <div class="tasks new">
   <h2>Create Task</h2>
 
   <%= form_for(@task) do |f| %>
-    <%= render(partial: "form", locals: {f: f}) %>
-    <%= f.submit("Create task") %>
+    <% # url: tasks_path, method: 'post' %>
+
+    <%= render(partial: 'form', locals: {f: f}) %>
+
+    <div class="form-buttons">
+      <%= f.submit("Create Task") %>
+    </div>
+
   <% end %>
 </div>
