--- a/Experiments/Ruby/rails-projects/task-manager-app/app/views/access/menu.html.erb
+++ b/Experiments/Ruby/rails-projects/task-manager-app/app/views/access/menu.html.erb
@@ -1,5 +1,5 @@
 <% if flash[:notice].present? %>
-  <div style="border: 1px solid red; color: red; padding: 10px;">
+  <div style="border: 1px solid green; color: green; padding: 10px;">
     <%= flash[:notice] %>
   </div>
 <% end %>
