--- a/Experiments/Ruby/rails-projects/task-manager-app/app/views/access/new.html.erb
+++ b/Experiments/Ruby/rails-projects/task-manager-app/app/views/access/new.html.erb
@@ -1,3 +1,9 @@
+<% if flash[:notice].present? %>
+  <div style="border: 1px solid red; color: red; padding: 10px;">
+    <%= flash[:notice] %>
+  </div>
+<% end %>
+
 <div class="access new">
   <h2>Welcome</h2>
   <p>A simulated log in form</p>
