--- a/Experiments/Ruby/rails-projects/task-manager-app/app/views/layouts/application.html.erb
+++ b/Experiments/Ruby/rails-projects/task-manager-app/app/views/layouts/application.html.erb
@@ -21,6 +21,10 @@
       <% end %>
     </header>
 
+    <% if flash[:notice].present? %>
+      <div class='flash-notification'><%= flash[:notice] %></div>
+    <% end %>
+
     <main>
       <%= yield %>
     </main>
