--- a/Experiments/Ruby/rails-projects/task-manager-app/app/assets/stylesheets/application.css
+++ b/Experiments/Ruby/rails-projects/task-manager-app/app/assets/stylesheets/application.css
@@ -61,3 +61,21 @@ footer {
   padding: 0 1rem;
   height: 60px;
 }
+
+span.status {
+  display: block;
+  width: 14px;
+  height: 14px;
+  border-radius: 99px;
+  padding: 0;
+}
+span.status.true {
+  background-color: mediumspringgreen;
+}
+span.status.false {
+  background-color: crimson;
+}
+
+tr.header th {
+  text-align: left;
+}
