--- a/Experiments/Ruby/rails-projects/feature-dash/app/assets/stylesheets/toggle.css
+++ b/Experiments/Ruby/rails-projects/feature-dash/app/assets/stylesheets/toggle.css
@@ -3,10 +3,10 @@
 }
 
 .switch {
-  display: inline-block;
+  display: block;
   width: 60px;
   height: 30px;
-  margin: 2px;
+  margin: 2px 0;
   position: relative;
 }
 
@@ -17,7 +17,7 @@
   left: 0;
   right: 0;
   border-radius: 30px;
-  box-shadow: 0 0 0 2px black, 0 0 4px black;
+  box-shadow: 0 0 0 2px var(--gray-50), 0 0 4px var(--gray-50);
   cursor: pointer;
   border: 4px solid transparent;
   overflow: hidden;
@@ -29,7 +29,7 @@
   content: "";
   width: 100%;
   height: 100%;
-  background-color: black;
+  background-color: var(--gray-50);
   border-radius: 30px;
   transform: translateX(-30px);
   transition: 0.2s;
