--- a/Experiments/Ruby/rails-projects/feature-dash/app/assets/stylesheets/feature.css
+++ b/Experiments/Ruby/rails-projects/feature-dash/app/assets/stylesheets/feature.css
@@ -1,9 +1,15 @@
+.unstyled-anchor {
+  display: block;
+  color: inherit;
+  text-decoration: none;
+}
+
 .tile_feature {
   background-color: white;
   border: 1px solid #d4d4d4;
   box-shadow: 0 3px 8px -2px rgba(0, 0, 0, 0.2);
-  border-radius: 8px;
-  padding: 14px 20px;
+  border-radius: 10px;
+  padding: 20px;
   margin-bottom: 10px;
 }
 
