--- a/Experiments/Ruby/rails-projects/feature-dash/app/views/features/index.html.erb
+++ b/Experiments/Ruby/rails-projects/feature-dash/app/views/features/index.html.erb
@@ -1,10 +1,12 @@
 <div class="page_wrap">
-  <div class="list_features">
-  <h2>Experiences</h2>
+  <header>
+    <h2>Experiences</h2>
+  </header>
 
   <%# <%= link_to("Add New Feature", new_feature_path, class: 'action new') %>
 
-    <% @features.each do |feature| %>
+  <% @features.each do |feature| %>
+    <%= link_to(edit_feature_path(feature), :class => "unstyled-anchor") do %>
       <div class="tile_feature">
         <h4><%= feature.display_name %></h4>
         <% if feature.description %>
@@ -13,7 +15,7 @@
         <hr>
         <p>
           <span><strong><%= "Enabled:" %></strong></span>
-          <span><%= feature.enabled.enabled %></span>
+          <span><%= feature.enabled.is_enabled %></span>
         </p>
         <% if feature.condition %>
           <p>
@@ -23,11 +25,11 @@
         <% end %>
         <%# <div class="switch_container"> %>
           <%# <label class="switch"> %>
-            <%# <input type="checkbox" <%= feature.enabled.enabled ? "checked" : "" %> 
+            <%# <input type="checkbox" <%= feature.enabled.is_enabled ? "checked" : "" %> 
             <%# <span class="slider"></span> %>
           <%# </label> %>
         <%# </div> %>
       </div>
     <% end %>
-  </div>
+  <% end %>
 </div>
